--- a/assets/MoPub Refresh/manifest.json
+++ b/assets/MoPub Refresh/manifest.json
@@ -1,17 +1,24 @@
 {
-  "name": "MoPub Refresh",
-  "version": "0.1",
-  "manifest_version" : 2,
-  "description": "Refresh CPM rates every 10 minutes.",
-  "icons": { "128": "luvrlogo.png" },
-  "browser_action": {
-    "default_title": "",
-    "default_icon": "luv.png"
-  },
-  "content_scripts": [
-    {
-      "matches": ["https://*.mopub.com/*"],
-      "js": ["jquery.min.js", "bg.js"]
-    }
-  ]
+    "name": "MoPub Refresh",
+    "version": "0.1",
+    "manifest_version": 2,
+    "description": "Refresh CPM rates every 3 minutes.",
+    "icons": {
+        "128": "luvrlogo.png"
+    },
+    "browser_action": {
+        "default_title": "",
+        "default_icon": "luv.png",
+        "default_popup": "popup.html"
+    },
+    "permissions": [
+        "activeTab",
+        "https://app.mopub.com/"
+    ],
+    "content_scripts": [
+        {
+            "matches": ["https://*.mopub.com/*"],
+            "js": ["jquery.min.js","script.js"]
+        }
+    ]
 }
